Bug 1546397 - Blacklist WebGL on some android devices r=jgilbert

Differential Revision: https://phabricator.services.mozilla.com/D36153